--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
     <header>
         <div>
             <nav class="navbar">
-                <div class="navbar_container">
-                    <a href="#" class="logo">
-                        <!-- <img src="/src/assets/img/game.png"> -->
+                <div class="navbar__container">
+                    <a href="#" class="navbar__container__logo">
                     </a>
-                    <button class="menu-toggler">
+                    <button class="navbar__container__menu-toggler">
                         <span></span>
                         <span></span>
                         <span></span>
                     </button>
-                    <div class="navbar-menu">
+                    <div class="navbar__container__menu">
                         <a href="#">Home</a>
                         <a href="#">About</a>
                         <a href="#">Experience</a>
@@ -41,20 +40,20 @@
 
     <!-- Home -->
     <section id="home">
-        <div class="home_container--left">
-            <div class="content">
+        <div class="home__container--left">
+            <div class="home__container--left__content">
                 <h1>
                     <span class="hello">HELLO</span>
                     <span class="name">I'M 
-                        <span class="text--red">SHENGYAN</span>
+                    <span class="text--red">SHENGYAN</span>
                     </span>
                     <span class="job">A WEB DEVELOPER</span>   
                 </h1>
             </div>
         </div>
 
-        <div class="home_container--right">
-            <div class="frame">
+        <div class="home__container--right">
+            <div class="home__container--right__frame">
                 <span class="icon">
                 </span>
                 <span class="spacer">
@@ -65,13 +64,19 @@
                     <i></i>
                     <i></i>
                 </span>
-                <span>Shengyan Liu</span>
+                <h2>Shengyan Liu</h2>
             </div>
-            <div class="profile"></div>
-            <div class="social-logo">
+            <div class="home__container--right__profile">
+                <img src="/src/assets/img/profile.jpg">
+            </div>
+            <div class="home__container--right__social-logo">
                 <a href="https://www.instagram.com/liu_shengyan/" class="fab fa-instagram"></a>
                 <a href="https://www.linkedin.com/in/shengyan-liu-19b879201/" class="fab fa-linkedin-in"></a>
                 <a href="https://www.facebook.com/shengyan.liu.12" class="fab fa-facebook"></a>
+            </div>
+            <div class="home__container--right__buttons">
+                <a href="#">Contact Me</a>
+                <a href="#">Download CV</a>
             </div>
 
         </div>
