add the responsive design for homepage (first version)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="src/scss/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="src/Javascript/main.js"></script>
+    <script src="src/javascript/main.js"></script>
 
 
 </head>
@@ -30,9 +30,10 @@
                         <a href="#">Home</a>
                         <a href="#">About</a>
                         <a href="#">Experience</a>
-                        <a href="#">All Projects</a>
+                        <a href="#">Projects</a>
                         <a href="#">Contact</a>
                     </div>
+                    <hr>
                 </div>
             </nav>
         </div>  
@@ -40,45 +41,47 @@
 
     <!-- Home -->
     <section id="home">
-        <div class="home__container--left">
-            <div class="home__container--left__content">
-                <h1>
-                    <span class="hello">HELLO</span>
-                    <span class="name">I'M 
-                    <span class="text--red">SHENGYAN</span>
+        <div class="home__container">
+            <div class="home__container--left">
+                <div class="home__container--left__content">
+                    <h1>
+                        <span class="hello">HELLO</span>
+                        <span class="name">I'M 
+                        <span class="text--red">SHENGYAN</span>
+                        </span>
+                        <span class="job">A WEB DEVELOPER</span>   
+                    </h1>
+                </div>
+            </div>
+
+            <div class="home__container--right">
+                <div class="home__container--right__frame">
+                    <span class="icon">
                     </span>
-                    <span class="job">A WEB DEVELOPER</span>   
-                </h1>
-            </div>
-        </div>
+                    <span class="spacer">
+                        <i></i>
+                        <i></i>
+                        <i></i>
+                        <i></i>
+                        <i></i>
+                        <i></i>
+                    </span>
+                    <h2>Shengyan Liu</h2>
+                </div>
+                <div class="home__container--right__profile">
+                    <img src="/src/assets/img/profile.jpg">
+                </div>
+                <div class="home__container--right__social-logo">
+                    <a href="https://www.instagram.com/liu_shengyan/" class="fab fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/shengyan-liu-19b879201/" class="fab fa-linkedin-in"></a>
+                    <a href="https://www.facebook.com/shengyan.liu.12" class="fab fa-facebook"></a>
+                </div>
+                <div class="home__container--right__buttons">
+                    <a  href="#">Contact Me</a>
+                    <a  href="#">Resume</a>
+                </div>
 
-        <div class="home__container--right">
-            <div class="home__container--right__frame">
-                <span class="icon">
-                </span>
-                <span class="spacer">
-                    <i></i>
-                    <i></i>
-                    <i></i>
-                    <i></i>
-                    <i></i>
-                    <i></i>
-                </span>
-                <h2>Shengyan Liu</h2>
             </div>
-            <div class="home__container--right__profile">
-                <img src="/src/assets/img/profile.jpg">
-            </div>
-            <div class="home__container--right__social-logo">
-                <a href="https://www.instagram.com/liu_shengyan/" class="fab fa-instagram"></a>
-                <a href="https://www.linkedin.com/in/shengyan-liu-19b879201/" class="fab fa-linkedin-in"></a>
-                <a href="https://www.facebook.com/shengyan.liu.12" class="fab fa-facebook"></a>
-            </div>
-            <div class="home__container--right__buttons">
-                <a href="#">Contact Me</a>
-                <a href="#">Download CV</a>
-            </div>
-
         </div>
 
 
